--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
     "css-loader": "^2.0.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -20,6 +24,7 @@
     "webpack-merge": "^4.1.5"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.5.21",
     "vue-loader": "^15.4.2",
