--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "author": "tianlixin",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "dev": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --open --config webpack.dev.js",
+    "build": "babel-node ./node_modules/webpack/bin/webpack --config webpack.prod.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.1",
@@ -29,6 +30,7 @@
     "vue": "^2.5.21",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vuex": "^3.0.1"
   }
 }
